# Extrator_de_estornos

./: .gitignore  formatar_planilha.py  gerar_pdf.py  main.py  pyproject.toml
